[gd_scene load_steps=4 format=3 uid="uid://dqudqx6edso15"]

[ext_resource type="Script" path="res://Player.gd" id="1_oecbk"]
[ext_resource type="SpriteFrames" uid="uid://dxw8rgfbnngi0" path="res://player.tres" id="2_o4it3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_11b3w"]
radius = 43.0
height = 94.0

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_oecbk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_11b3w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = ExtResource("2_o4it3")
animation = &"new_animation"

[node name="PathCounter" type="Label" parent="."]
offset_top = -38.0
offset_right = 48.0
offset_bottom = -15.0
text = "PathLength"

[node name="WorldPosition" type="Label" parent="."]
offset_top = -18.0
offset_right = 40.0
offset_bottom = 5.0
text = "World"

[node name="PlayerPosition" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
